infra/k8s-dev/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  rules:
    - host: geekfindr.dev
      http:
        paths:
          - path: /api/v1/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/v1/profiles/?(.*)
            pathType: Prefix
            backend:
              service:
                name: profiles-srv
                port:
                  number: 3000
          - path: /api/v1/posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port:
                  number: 3000
          - path: /api/v1/uploads/?(.*)
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port:
                  number: 3000
          - path: /api/v1/projects/?(.*)
            pathType: Prefix
            backend:
              service:
                name: projects-srv
                port:
                  number: 3000
          - path: /api/v1/chats/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chats-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: chats-srv
                port:
                  number: 3000
